--- a/ARApplication/app/build.gradle
+++ b/ARApplication/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
 
     implementation 'com.google.ar:core:1.30.0'
     implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.17.1'
+    implementation 'com.google.ar.sceneform:assets:1.17.1'
 }
